codex-rs/tui/src/analytics/snapshots/codex_tui__analytics__tests__chats_table__chats_breakdown_ranks_nonzero_groups_and_reflows.snap
---
source: tui/src/analytics/chat_panel_tests.rs
expression: "screens.join(\"\\n\")"
---
" Usage · Enterprise                                                                                           "
"  1 Overview   2 Credits   3 Tokens   4 Plugins   5 Skills   6 Chats                                          "
" ──────────────────────────────────────────────────────────────────────────────────────────────────────────── "
"                                                                                                              "
"                                                                                                              "
" Active in past 30 days · sorted by lifetime credits                                                          "
"                                                                                                              "
"   Chat                                                                          Lifetime credits             "
" › Q3 planning analysis                                                                 19,350.04             "
"   ──────────────────────────────────────────────────────────────────────────────────────────────             "
"   Model                                               Effort        Speed                Credits             "
"   Top model                                           high          Not reported       19,134.43             "
"   Small model                                         high          standard              215.61             "
"   Refund model                                        high          standard           -0.000004             "
"   1 zero-credit group hidden · a show all                                                                    "
"                                                                                                              "
"   Refactor billing usage                                                                  113.00             "
"   Other usage                                                                             109.00             "
"   Launch readiness review                                                                  85.00             "
"   Plan the week                                                                             0.00             "
"                                                                                                              "
" Showing 1–5 of 5 chats                                                                                       "
" Local chats · excludes archived chats and subagent usage                                                     "
"                                                                                                              "
"                                                                                                              "
"                                                                                                              "
"                                                                                                              "
"                                                                                                              "
"                                                                                                              "
"                                                                                                              "
" ↑/↓ row · enter details · esc back                                                                           "
" tab/1–6 report · z dashboard · ? help · R refresh                                                            "

" Usage · Enterprise                                       "
"  Overview   Credits   Tokens   Plugins   Skills   Chats  "
" ──────────────────────────────────────────────────────── "
"                                                          "
"                                                          "
"                                                          "
" Active in past 30 days · sorted by lifetime credits      "
"                                                          "
"   Chat                                  Lifetime credits "
" › Q3 planning analysis                         19,350.04 "
"   ────────────────────────────────────────────────────── "
"   Model / effort / speed                         Credits "
"   Top model                                    19,134.43 "
"     high · Not reported                                  "
"   Small model                                     215.61 "
"     high · standard                                      "
"   Refund model                                 -0.000004 "
"     high · standard                                      "
"   1 zero-credit group hidden · a show all                "
"                                                          "
"   Refactor billing usage                          113.00 "
"   Other usage                                     109.00 "
"   Launch readiness review                          85.00 "
"   Plan the week                                     0.00 "
"                                                          "
" Showing 1–5 of 5 chats                                   "
" Local chats · excludes archived chats and subagent usage "
"                                                          "
"                                                          "
"                                                          "
" ↑/↓ row · enter details · esc back                       "
" tab report · z dashboard · ? help · R refresh            "

" Usage · Enterprise                                                                                           "
"  1 Overview   2 Credits   3 Tokens   4 Plugins   5 Skills   6 Chats                                          "
" ──────────────────────────────────────────────────────────────────────────────────────────────────────────── "
"                                                                                                              "
"                                                                                                              "
" Active in past 30 days · sorted by lifetime credits                                                          "
"                                                                                                              "
"   Chat                                                                          Lifetime credits             "
" › Q3 planning analysis                                                                 19,350.04             "
"   ──────────────────────────────────────────────────────────────────────────────────────────────             "
"   Model                                               Effort        Speed                Credits             "
"   Top model                                           high          Not reported       19,134.43             "
"   Small model                                         high          standard              215.61             "
"   Zero model                                          high          standard                0.00             "
"   Refund model                                        high          standard           -0.000004             "
"   1 zero-credit group · a hide zeros                                                                         "
"                                                                                                              "
"   Refactor billing usage                                                                  113.00             "
"   Other usage                                                                             109.00             "
"   Launch readiness review                                                                  85.00             "
"   Plan the week                                                                             0.00             "
"                                                                                                              "
" Showing 1–5 of 5 chats                                                                                       "
" Local chats · excludes archived chats and subagent usage                                                     "
"                                                                                                              "
"                                                                                                              "
"                                                                                                              "
"                                                                                                              "
"                                                                                                              "
"                                                                                                              "
" ↑/↓ row · enter details · esc back                                                                           "
" tab/1–6 report · z dashboard · ? help · R refresh                                                            "
