codex-rs/tui/src/analytics/snapshots/codex_tui__analytics__tests__chats_table__chats_long_title_keeps_detail_indent_and_counts_missing_estimates.snap
---
source: tui/src/analytics/chat_panel_tests.rs
expression: output
---
" Usage · Enterprise                                                                                           "
"  1 Overview   2 Credits   3 Tokens   4 Plugins   5 Skills   6 Chats                                          "
" ──────────────────────────────────────────────────────────────────────────────────────────────────────────── "
"                                                                                                              "
"                                                                                                              "
" Active in past 30 days · sorted by lifetime credits                                                          "
" 2 chat estimates unavailable                                                                                 "
"                                                                                                              "
"   Chat                                                                          Lifetime credits             "
" › Create a comprehensive list of areas to investigate across the runtime and describe ho… 120.00             "
"   ──────────────────────────────────────────────────────────────────────────────────────────────             "
"     Create a comprehensive list of areas to investigate across the runtime and describe how each             "
"     area affects performance in a long conversation                                                          "
"   Model                                               Effort        Speed                Credits             "
"   GPT-5.6-Sol                                         high          standard              120.00             "
"                                                                                                              "
"   Chat usage unavailable                                                                       —             "
"   Chat usage unavailable                                                                       —             "
"   Launch readiness review                                                                  85.00             "
"   Plan the week                                                                             0.00             "
"                                                                                                              "
" Showing 1–5 of 5 chats                                                                                       "
" Local chats · excludes archived chats and subagent usage                                                     "
"                                                                                                              "
"                                                                                                              "
"                                                                                                              "
"                                                                                                              "
"                                                                                                              "
" ↑/↓ row · enter details · esc back                                                                           "
" tab/1–6 report · z dashboard · ? help · R refresh                                                            "
