codex-rs/tui/src/analytics/snapshots/codex_tui__analytics__tests__chats_table__chats_range_controls_and_visible_rows.snap
---
source: tui/src/analytics/chat_panel_tests.rs
expression: "screens.join(\"\\n\")"
---
"  Analytics  ·  Live account                                                                                  "
"                                                                                                              "
"                                                                                                              "
"  1 Summary  2 Credits usage history  3 Token usage history  4 Plugins called  5 Skills used  [6 Top chats]   "
"                                                                                                              "
"  ▎ Top chats                                                                                                 "
"  ──────────────────────────────────────────────────────────────────────────────────────────────────────────  "
"  Active in past 30 days · sorted by lifetime credits                                                         "
"                                                                                                              "
"    Chat                                                                          Lifetime credits            "
"  › Chat 01                                                                                 120.00            "
"    Chat 02                                                                                 120.00            "
"    Chat 03                                                                                 120.00            "
"    Chat 04                                                                                 120.00            "
"    Chat 05                                                                                 120.00            "
"    Chat 06                                                                                 120.00            "
"    Chat 07                                                                                 120.00            "
"    Chat 08                                                                                 120.00            "
"                                                                                                              "
"  Showing 1–8 of 30 chats                                                                                     "
"  Local chats · excludes archived chats and subagent usage                                                    "
"                                                                                                              "
"  tab/1–6 section · z dashboard · ↑/↓ row · enter details                                                     "
"  R refresh · esc back · q close                                                                              "

"  Analytics  ·  Live account                                                                                  "
"                                                                                                              "
"                                                                                                              "
"  1 Summary  2 Credits usage history  3 Token usage history  4 Plugins called  5 Skills used  [6 Top chats]   "
"                                                                                                              "
"  ▎ Top chats                                                                                                 "
"  ──────────────────────────────────────────────────────────────────────────────────────────────────────────  "
"  Active in past 30 days · sorted by lifetime credits                                                         "
"                                                                                                              "
"    Chat                                                                          Lifetime credits            "
"    Chat 23                                                                                 120.00            "
"    Chat 24                                                                                 120.00            "
"    Chat 25                                                                                 120.00            "
"    Chat 26                                                                                 120.00            "
"    Chat 27                                                                                 120.00            "
"    Chat 28                                                                                 120.00            "
"    Chat 29                                                                                 120.00            "
"  › Chat 30                                                                                 120.00            "
"                                                                                                              "
"  Showing 23–30 of 30 chats                                                                                   "
"  Local chats · excludes archived chats and subagent usage                                                    "
"                                                                                                              "
"  tab/1–6 section · z dashboard · ↑/↓ row · enter details                                                     "
"  R refresh · esc back · q close                                                                              "

"  Analytics  ·  Live account                                                                                  "
"                                                                                                              "
"                                                                                                              "
"  1 Summary  2 Credits usage history  3 Token usage history  4 Plugins called  5 Skills used  [6 Top chats]   "
"                                                                                                              "
"  ▎ Top chats                                                                                                 "
"  ──────────────────────────────────────────────────────────────────────────────────────────────────────────  "
"  Active in past 30 days · sorted by lifetime credits                                                         "
"                                                                                                              "
"    Chat                                                                          Lifetime credits            "
"    Chat 27                                                                                 120.00            "
"    Chat 28                                                                                 120.00            "
"    Chat 29                                                                                 120.00            "
"  › Chat 30                                                                                 120.00            "
"    ──────────────────────────────────────────────────────────────────────────────────────────────            "
"    Model                                               Effort        Speed                Credits            "
"    GPT-5.6-Sol                                         high          standard              120.00            "
"                                                                                                              "
"                                                                                                              "
"  Showing 27–30 of 30 chats                                                                                   "
"  Local chats · excludes archived chats and subagent usage                                                    "
"                                                                                                              "
"  tab/1–6 section · z dashboard · ↑/↓ row · enter details                                                     "
"  R refresh · esc back · q close                                                                              "
