codex-rs/tui/src/analytics/snapshots/codex_tui__analytics__tests__chats_table__moving_chat_selection_collapses_details_before_they_leave_the_viewport.snap
---
source: tui/src/analytics/chat_panel_tests.rs
assertion_line: 205
expression: "screen(&mut view, 110, 24)"
---
"  Analytics  ·  Live account                                                                                  "
"                                                                                                              "
"  1 Credits usage history  2 Token usage history  3 Plugins called  4 Skills used  [5 Top chats]              "
"                                                                                                              "
"  ▎ Top chats                                                                                                 "
"  ──────────────────────────────────────────────────────────────────────────────────────────────────────────  "
"  Active in past 30 days · sorted by lifetime credits                                                         "
"                                                                                                              "
"    Chat                                                                          Lifetime credits            "
"    Q3 planning analysis                                                                    120.00            "
"    Refactor billing usage                                                                  113.00            "
"    Other usage                                                                             109.00            "
"    Launch readiness review                                                                  85.00            "
"  › Plan the week                                                                             0.00            "
"                                                                                                              "
"  Showing 1–5 of 5 chats                                                                                      "
"  Local chats · excludes archived chats and subagent usage                                                    "
"                                                                                                              "
"                                                                                                              "
"                                                                                                              "
"                                                                                                              "
"                                                                                                              "
"  tab/1–5 section · z dashboard · ↑/↓ row · enter details                                                     "
"  R refresh · pgup/pgdn scroll · esc back · q close                                                           "
