codex-rs/tui/src/analytics/snapshots/codex_tui__analytics__tests__chats_table__unavailable_chat_titles_are_hidden_in_panel_and_overview.snap
---
source: tui/src/analytics/chat_panel_tests.rs
assertion_line: 165
expression: "screens.join(\"\\n\")"
---
"  Analytics  ·  Live account                                                                                  "
"                                                                                                              "
"  1 Credits usage history  2 Token usage history  3 Plugins called  4 Skills used  [5 Top chats]              "
"                                                                                                              "
"  ▎ Top chats                                                                                                 "
"  ──────────────────────────────────────────────────────────────────────────────────────────────────────────  "
"  Active in past 30 days · sorted by lifetime credits                                                         "
"  1 chat estimate unavailable                                                                                 "
"                                                                                                              "
"    Chat                                                                          Lifetime credits            "
"  › Chat usage unavailable                                                                       —            "
"                                                                                                              "
"  Showing 1–1 of 1 chats                                                                                      "
"  Local chats · excludes archived chats and subagent usage                                                    "
"                                                                                                              "
"                                                                                                              "
"                                                                                                              "
"                                                                                                              "
"                                                                                                              "
"                                                                                                              "
"                                                                                                              "
"                                                                                                              "
"                                                                                                              "
"                                                                                                              "
"                                                                                                              "
"                                                                                                              "
"  tab/1–5 section · z dashboard · ↑/↓ row · enter details                                                     "
"  R refresh · pgup/pgdn scroll · esc back · q close                                                           "

"  Analytics  ·  Live account                                                                                  "
"                                                                                                              "
"  │                                                 │    │                                                 │  "
"  │ Sep 2 · 29 calls                                │    │ Sep 2 · 11 uses                                 │  "
"  │ ● Slack                                      10 │    │ ● Testing                                     4 │  "
"  │ ● Figma                                      10 │    │ ● Code review                                 3 │  "
"  │                                                 │    │                                                 │  "
"  │                                                 │    │                                                 │  "
"  ╰─────────────────────────────────────────────────╯    ╰─────────────────────────────────────────────────╯  "
"                                                                                                              "
"  ╭─ ▸ 5 Top chats ─────────────────────────────────╮                                                         "
"  │                                                 │                                                         "
"  │ 30d active · lifetime credits                   │                                                         "
"  │                                                 │                                                         "
"  │ Chat usage unavailable                        — │                                                         "
"  │                                                 │                                                         "
"  │ Local chats · excludes subagents                │                                                         "
"  │ Some estimates unavailable                      │                                                         "
"  │                                                 │                                                         "
"  │                                                 │                                                         "
"  │                                                 │                                                         "
"  │                                                 │                                                         "
"  │                                                 │                                                         "
"  │                                                 │                                                         "
"  │                                                 │                                                         "
"  ╰─────────────────────────────────────────────────╯                                                         "
"  tab/1–5 section · enter/z maximize                                                                          "
"  R refresh · pgup/pgdn scroll · esc back · q close                                                           "
